--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -15,11 +15,14 @@ body {
   max-width: 1200px;
 }
 
-h1 {
+.dashboard-container h1 {
   font-size: 28px;
   margin-bottom: 20px;
   color: #2c3e50;
   text-align: center;
+  background-color: #92c9ee; 
+  padding: 10px 0;
+  border-radius: 8px 8px 0 0; 
 }
 
 .controls {
@@ -115,7 +118,11 @@ table td {
 }
 
 table th {
-  background-color: #f3f4f6;
+  background-color: #e0e7f5;
+}
+
+table tbody tr:hover { 
+  background-color: #ecf1f7;
 }
 
 .pagination {
@@ -202,3 +209,4 @@ table th {
     flex-grow: 1;
   }
 }
+
